tests/syntax-error/init-assign.silly
// RUN: %Not %ExeSilly -g %s -o %t.exe 2>&1 | %FileCheck %s
// CHECK: init-assign.silly:4:12: error: syntax error

INT32 s{3} = 4;
